Fix scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html {
   padding: 0;
   margin: 0;
   height: 100%;
-  height: 100vh;
   width: 100%;
 }
 
